test/parallel/forall/task-private-vars/throwing-init-exprs/example-pr-13203-a.good
example-pr-13203-a.chpl:4: error: the initialization expression of the task-private variable 'reader' throws - this is currently not supported for variables of non-POD types
