test/parallel/forall/task-private-vars/throwing-init-exprs/example-pr-13203-a.chpl

use IO;
var f = open("", iomode.rw);
forall i in 1..100 with (var reader = f.reader()) do ;
